--- a/test/specrunner.html
+++ b/test/specrunner.html
@@ -9,37 +9,38 @@
   <script type="text/javascript" src="lib/jasmine-core/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-core/jasmine-html.js"></script>
 
-  <script data-main="/js/main.js" src="/js/libs/require.js">
-  <!-- include spec files here... -->
-  <script type="text/javascript" src="/js/modules/rubric/tests/models/rubric.js"></script>
+  <script src="/js/libs/require.js"></script>
+  <script src="/js/main.js"></script>
+  <script>
+    require(['test/tests'], function() {
 
-  <script type="text/javascript">
-    (function() {
-      var jasmineEnv = jasmine.getEnv();
-      jasmineEnv.updateInterval = 1000;
+      (function() {
+        var jasmineEnv = jasmine.getEnv();
+        jasmineEnv.updateInterval = 1000;
 
-      var htmlReporter = new jasmine.HtmlReporter();
+        var htmlReporter = new jasmine.HtmlReporter();
 
-      jasmineEnv.addReporter(htmlReporter);
+        jasmineEnv.addReporter(htmlReporter);
 
-      jasmineEnv.specFilter = function(spec) {
-        return htmlReporter.specFilter(spec);
-      };
+        jasmineEnv.specFilter = function(spec) {
+          return htmlReporter.specFilter(spec);
+        };
 
-      var currentWindowOnload = window.onload;
+        var currentWindowOnload = window.onload;
 
-      window.onload = function() {
-        if (currentWindowOnload) {
-          currentWindowOnload();
+        window.onload = function() {
+          if (currentWindowOnload) {
+            currentWindowOnload();
+          }
+          execJasmine();
+        };
+
+        function execJasmine() {
+          jasmineEnv.execute();
         }
-        execJasmine();
-      };
 
-      function execJasmine() {
-        jasmineEnv.execute();
-      }
-
-    })();
+      })();
+    });
   </script>
 
 </head>
